# sdk-core-python

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
datatower_ai/: __init__.py  __main__.py  __version__.py  sdk.py
datatower_ai/__cl/: ad.py  analytics.py  raw_track.py  test.py  test2.py  user.py
datatower_ai/api/: __init__.py  ad.py  analytics_util.py  base.py
datatower_ai/src/: extra_verify.py
datatower_ai/src/bean/: __init__.py  event.py  pager_code.py
datatower_ai/src/consumer/: __init__.py  abstract_consumer.py  async_batch_consumer.py  database_cache_consumer.py
datatower_ai/src/data/: extra_verify.py
datatower_ai/src/data/database/: __init__.py  config_dao.py  dt_database.py  event_dao.py
datatower_ai/src/process/: __init__.py  event_processor.py  extra_verify.py
datatower_ai/src/service/: __init__.py  http_service.py
datatower_ai/src/strategy/: __init__.py  exceed_insertion_strategy.py
datatower_ai/src/util/: __init__.py  _holder.py  decoration.py  exception.py  json_util.py  logger.py  singleton.py  time_monitor.py  type_check.py
datatower_ai/src/util/data_struct/: mini_lru.py
datatower_ai/src/util/performance/: __init__.py  counter_monitor.py  quality_helper.py  time_monitor.py
datatower_ai/src/util/thread/: __init__.py  file_lock.py  swmr_lock.py  thread.py
example/: test.py
test/: test_dtsdk.py
