[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datatower-ai"
authors = [{name = "DataTower.ai"}]
description = "DataTower.ai Core SDK for Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=2.7"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://datatower.ai/"
Repository = "https://github.com/datatower-ai/sdk-core-python.git"

[tool.hatch.version]
path = "datatower_ai/__version__.py"